5/8/2025 - complete all except for notification and statistics